--- a/index.html
+++ b/index.html
@@ -1,34 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <!-- Google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Social links profile</title>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      body {
+        background-color: hsl(0, 0%, 8%);
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        font-family: "Inter", sans-serif;
+        display: grid;
+        place-content: center;
+      }
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      .container {
+        background-color: hsl(0, 0%, 12%);
+        padding: 40px;
+        border-radius: 15px;
+        margin: 0 15px;
+      }
+
+      .profile-img {
+        display: flex;
+        justify-content: center;
+      }
+
+      .profile-img img {
+        width: 100%;
+        height: auto;
+        max-width: 90px;
+        border-radius: 100px;
+      }
+
+      .container h2 {
+        color: hsl(0, 0%, 100%);
+        text-transform: capitalize;
+        letter-spacing: 0.01em;
+        font-weight: 600;
+        text-align: center;
+      }
+
+      .container h4 {
+        color: hsl(75, 94%, 57%);
+        text-transform: capitalize;
+        margin-top: -12px;
+        font-size: 14px;
+        letter-spacing: 0.01em;
+        font-weight: 600;
+        text-align: center;
+      }
+
+      .container > .descr {
+        color: hsl(0, 0%, 100%);
+        font-size: 14px;
+        margin-top: 24px;
+        text-align: center;
+      }
+
+      .social-links {
+        margin-top: 20px;
+      }
+
+      .social-links .social-link-btn {
+        background-color: hsl(0, 0%, 20%);
+        color: hsl(0, 0%, 100%);
+        width: 100%;
+        display: block;
+        box-sizing: border-box;
+        text-align: center;
+        text-decoration: none;
+        padding: 12px;
+        border-radius: 10px;
+        font-size: 14px;
+        font-weight: 600;
+        margin-bottom: 15px;
+        letter-spacing: 0.01em;
+        transition: 0.5s ease-in-out;
+        text-transform: capitalize;
+      }
+
+      .social-links .social-link-btn:hover {
+        background-color: hsl(75, 94%, 57%);
+        color: hsl(0, 0%, 8%);
+      }
+
+      .social-links .social-link-btn:last-of-type {
+        margin-bottom: 0;
+      }
+
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="profile-img">
+        <img src="./assets/images/avatar-jessica.jpeg" alt="" />
+      </div>
+      <h2>jessica randall</h2>
+      <h4>london, united kingdom</h4>
+      <p class="descr">Front-end developer and avid reader.</p>
+      <div class="social-links">
+        <a href="https://github.com/Mozahedul" class="social-link-btn"
+          >GitHub</a
+        >
+        <a href="https://github.com/Mozahedul" class="social-link-btn"
+          >frontend mentor</a
+        >
+        <a href="https://github.com/Mozahedul" class="social-link-btn"
+          >linkedin</a
+        >
+        <a href="https://github.com/Mozahedul" class="social-link-btn"
+          >twitter</a
+        >
+        <a href="https://github.com/Mozahedul" class="social-link-btn"
+          >instagram</a
+        >
+      </div>
+    </div>
+    <!-- <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="#"
+        >Mozahedul Islam - A full-stack webdeveloper, experience in MERN stack,
+        JavaScript, Next.js, React.js MongoDB, Bootstrap, Tailwind CSS, Material
+        UI, git, and GitHub</a
+      >.
+    </div> -->
+  </body>
 </html>
