--- a/index.html
+++ b/index.html
@@ -129,38 +129,37 @@
         <div class="profile-img">
           <img src="./assets/images/avatar-jessica.jpeg" alt="profile" />
         </div>
-        <h1>jessica randall</h>
+        <h1>jessica randall</h1>
         <h2>london, united kingdom</h2>
         <p class="descr">Front-end developer and avid reader.</p>
       </header>
       <main class="social-links">
-        <a href="https://github.com/Mozahedul" class="social-link-btn"
-          >GitHub</a
-        >
-        <a href="https://github.com/Mozahedul" class="social-link-btn"
-          >frontend mentor</a
-        >
-        <a href="https://github.com/Mozahedul" class="social-link-btn"
-          >linkedin</a
-        >
-        <a href="https://github.com/Mozahedul" class="social-link-btn"
-          >twitter</a
-        >
-        <a href="https://github.com/Mozahedul" class="social-link-btn"
-          >instagram</a
-        >
+        <a href="https://github.com/Mozahedul" class="social-link-btn">
+          GitHub
+        </a>
+        <a href="https://github.com/Mozahedul" class="social-link-btn">
+          frontend mentor
+        </a>
+        <a href="https://github.com/Mozahedul" class="social-link-btn">
+          linkedin
+        </a>
+        <a href="https://github.com/Mozahedul" class="social-link-btn">
+          twitter
+        </a>
+        <a href="https://github.com/Mozahedul" class="social-link-btn">
+          instagram
+        </a>
       </main>
       <footer>
         <div class="attribution">
           Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by
-          <a href="https://portfolio-mozahedul.vercel.app/"
-            >Mozahedul Islam</a>
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+            Frontend Mentor
+          </a>
+          . Coded by
+          <a href="https://portfolio-mozahedul.vercel.app/">Mozahedul Islam</a>
         </div>
       </footer>
     </div>
-    
   </body>
 </html>
